# OPPlab2

./: CMakeLists.txt  Matrix.h  Scenarios.h  SimpleIterationMethod.h  SquareMatrix.cpp  SquareMatrix.h  Vector.cpp  Vector.h  main.cpp
MPI/: Scenarios.h  SimpleIterationMethod.h  SquareMatrix.cpp  SquareMatrix.h  Vector.cpp  Vector.h  main.cpp  schedule.h
Not parallel/: Scenarios.h  SimpleIterationMethod.h  SquareMatrix.cpp  Vector.cpp  Vector.h  main.cpp
PragmaOmp/: Scenarios.h  SimpleIterationMethod.h  SquareMatrix.cpp  SquareMatrix.h  Vector.cpp  Vector.h  main.cpp
PragmaOmpFor/: Scenarios.h  SquareMatrix.cpp  SquareMatrix.h  Vector.cpp  Vector.h  main.cpp  reduction.h
