cmake_minimum_required(VERSION 3.21)
project(OPPlab1)

set(CMAKE_CXX_STANDARD 17)

 add_executable(OPPlab1 "Not parallel/main.cpp" "Not parallel/SquareMatrix.cpp" "Not parallel/SquareMatrix.h" "Not parallel/Vector.cpp" "Not parallel/Vector.h" "Not parallel/SimpleIterationMethod.h" "Not parallel/Scenarios.h")
